tests/paczka1/fuzzy1/25681278.err
Error in line 10: stSYr A245 40,0
Error in line 14: S756 S756 25,8
Error in line 15: stSYr S838 28,3
Error in line 16: S756 A609 98,1
Error in line 19: stSYr A609 31,3
Error in line 20: S756 S756 13,2
